Desenvolvendo funcionalidade de atualizar parceiro #3
