# app/Http/Requests/UpdatePartnerRequest.php
@@ -1,0 +1,44 @@
+<?php
+
+namespace App\Http\Requests;
+
+use Illuminate\Validation\Rule;
+
+class UpdatePartnerRequest extends RegisterPartnerRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     */
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array<string, \Illuminate\Contracts\Validation\ValidationRule|array<mixed>|string>
+     */
+    public function rules(): array
+    {
+        $rule = parent::rules();
+        $rule['email'] = [
+            'required',
+            'string',
+            'email',
+            Rule::unique('partners', 'email')->ignore($this->id),
+        ];
+        $rule['logo'] = [
+            'nullable',
+            'file',
+            'max:2048',
+        ];
+        $rule['events.*.id'] = [
+            'nullable',
+            'int',
+            'exists:events,id',
+        ];
+        $rule[''] = [];
+        return $rule;
+    }
+}
